Ensure Time Series collections are supported as part of API v1

XMLWordPrintableJSON

    • Fully Compatible
    • QE 2021-09-20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Summary:

      As part of continuous delivery we should look to ensure that timeseries collections are supported as part of v1 of the stable API when apiStrict=True prior to the release of 5.1.  

      Current State:

      Currently, a user can create and insert into a timeseries collections with apiStrict=True. However, a user cannot currently query a timeseries collection in this state due to _$internalUnpackBucket not being supported with the implementation of SERVER-58076

      pymongo.errors.OperationFailure: BSON field 'aggregate.runtimeConstants' is not allowed with apiStrict:true., full error: {u'codeName': u'APIStrictError', u'code': 323, u'ok': 0.0, u'errmsg': u"BSON field 'aggregate.runtimeConstants' is not allowed with apiStrict:true."}
      Desired State:
      • Timeseries collections can be queried when apiStrict=True
        • Since _$internalUnpackBucket is not an intended human writable stage it should be included as part of the API v1, but disallowed for users to use to the best of our ability. 
      Notes: 
      • This ticket does not include any other stages/operators included as part of the Time Series Init such as $setWindowFields which are not currently part API v1.
      • The scope of this ticket is to ensure timeseries collections can be queried and work in the same fashion as 5.0 which may include any work for view support in API v1. 

            Assignee:
            Rui Liu (Inactive)
            Reporter:
            Michael Gargiulo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: