SERVER-59420 Allow querying time-series collection as part of API V1 when API strict set to true